[gd_scene load_steps=4 format=3 uid="uid://cld1u4cewxfaf"]

[ext_resource type="Texture2D" uid="uid://ckj38b1621hat" path="res://sprites/Alien1.png" id="1_h100l"]
[ext_resource type="Script" uid="uid://byp2esf4fsi2p" path="res://scripts/alien.gd" id="1_u8rjw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u8rjw"]
size = Vector2(12, 8)

[node name="Alien" type="CharacterBody2D" groups=["aliens"]]
script = ExtResource("1_u8rjw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1.19209e-07, 0)
texture = ExtResource("1_h100l")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_u8rjw")

[node name="Step" type="Timer" parent="."]
autostart = true

[node name="ChangeDirection" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Shoot" type="Timer" parent="."]

[connection signal="timeout" from="Step" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ChangeDirection" to="." method="_on_change_direction_timeout"]
[connection signal="timeout" from="Shoot" to="." method="_on_shoot_timeout"]
